Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-11269

connection_buffer_size passively ignores updates

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 3.0
    • 3.0
    • couchbase-bucket
    • Security Level: Public
    • Untriaged
    • Unknown

    Description

      If a producer already has a BufferLog then ENGINE_SUCCESS is returned when trying to reinitialize control flow. From client perspective it may be unclear if updated succeed. Workaround would be to check stats if this value has already been set.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sundar Sundar Sridharan (Inactive)
            tommie Tommie McAfee (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty