MB-11269 set upr connection_buffer_size in BufferLog

If BufferLog exists, UprProducer was passively ignoring size update.
Add testcase to ensure that new size does take effect

Change-Id: Ie8c3255e9d8b97d4613861d94a4be622556369de
Reviewed-on: http://review.couchbase.org/37939
Reviewed-by: Michael Wiederhold <mike@couchbase.com>
Tested-by: Michael Wiederhold <mike@couchbase.com>